--- a/vignettes/MultiStrataVignette.Rmd
+++ b/vignettes/MultiStrataVignette.Rmd
@@ -119,7 +119,7 @@ design <- make.design(region = region,
                               design = c("eszigzag", "systematic"),
                               line.length = 1200000,
                               design.angle = c(65, 90),
-                              bounding.shape = c("convex.hull", NA),
+                              bounding.shape = c("convex hull", NA),
                               edge.protocol = "minus",
                               truncation = 2000,
                               coverage.grid = cover)
