--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+dssd 0.3.2
+----------
+
+Updates
+
+ * Changed the default truncation distance to 50
+ * Remove dependency on 3Dplot (and therefore tcltk package)
+ * Minor code changes inline with CRAN coding policies
+
 dssd 0.3.1
 ----------
 
