Fix Atlas Issue
Ref #94 checks if using Atlas and whether the shape is invalid if so it sets the precision

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+dssd 1.0.2
+----------
+
+Bug Fixes
+
+ * Fixed Atlas bug by setting precision in Atlas environment when invalid shapes are detected.
+
 dssd 1.0.1
 ----------
 
